deploy/opengauss-usercenter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-usercenter
  name: opengauss-usercenter
