deploy/opengauss-usercenter/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: opengauss-usercenter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/opengauss-usercenter:v1.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        name: website
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
