deploy/opengauss-usercenter/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: opengauss-usercenter
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: website-v2
  type: ClusterIP
